# pyrollmatch

./: .gitignore  README.md  REFERENCE.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
benchmarks/: extended_validation.py  extended_validation_report.html  lalonde_sweep.py  lalonde_sweep_results.csv  model_comparison.py  model_comparison_report.html  validation.py  validation_report.html
docs/: index.html  pyrollmatch.html  search.js
src/pyrollmatch/: __init__.py  balance.py  core.py  diagnostics.py  match.py  reduce.py  score.py  weight.py
tests/: real_world.py  staggered_data.py  test_audit_fixes.py  test_distance_matching.py  test_ebal.py  test_integration.py  test_replacement_and_period_balance.py  test_replacement_validation.py  test_reproducibility.py  test_robust.py  test_smoke.py  test_staggered_parquet_fixture.py  test_stress.py  test_validation.py  test_weighted_diagnostics.py
tests/data/: generate_staggered_panel_large.py  generate_staggered_panel_xlarge.py  staggered_panel_large.parquet  staggered_panel_large_metadata.json
