[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrollmatch"
version = "0.0.4"
description = "Fast rolling entry matching for staggered adoption studies using polars + numpy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alan Huang" },
]
keywords = [
    "causal-inference",
    "matching",
    "propensity-score",
    "rolling-entry",
    "staggered-adoption",
    "difference-in-differences",
    "treatment-effects",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "polars>=1.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
]
r-comparison = [
    "rpy2>=3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyrollmatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
